@@ -1,0 +1,51 @@
+/*
+ * A stylesheet designed to be used with the HTML output of the
+ * Perl module Text::VimColor.
+ *
+ * This file defines colors for every vim syntax group, for testing the
+ * correctness of vim syntax files.
+ *
+ */
+
+body { color: black; background: white none }
+
+A:link { color: #00F; background: white none }
+A:visited { color: #909; background: white none }
+A:hover { color: #F00; background: white none }
+A:active { color: #F00; background: white none }
+
+.synNormal         { color: #000000 }
+.synComment        { color: #0000FF }
+.synConstant       { color: #FF00FF }
+.synSpecial        { color: #6A5ACD }
+.synIdentifier     { color: #008B8B }
+.synStatement      { color: #A52A2A ; font-weight: bold }
+.synPreProc        { color: #A020F0 }
+.synType           { color: #2E8B57 ; font-weight: bold }
+.synUnderlined     { color: #000000 ; text-decoration: underline }
+.synIgnore         { color: #000000 }
+.synError          { color: #FFFFFF ; background: #FF0000 none }
+.synTodo           { color: #0000FF ; background: #FFFF00 none }
+.synString         { color: #000000 }
+.synCharacter      { color: #000000 }
+.synNumber         { color: #000000 }
+.synBoolean        { color: #000000 }
+.synFloat          { color: #000000 }
+.synFunction       { color: #000000 }
+.synConditional    { color: #000000 }
+.synRepeat         { color: #000000 }
+.synLabel          { color: #000000 }
+.synOperator       { color: #000000 }
+.synKeyword        { color: #000000 }
+.synException      { color: #000000 }
+.synInclude        { color: #000000 }
+.synDefine         { color: #000000 }
+.synMacro          { color: #000000 }
+.synPreCondit      { color: #000000 }
+.synStorageClass   { color: #000000 }
+.synTypedef        { color: #000000 }
+.synTag            { color: #000000 }
+.synSpecialChar    { color: #000000 }
+.synDelimiter      { color: #000000 }
+.synSpecialComment { color: #000000 }
+.synDebug          { color: #000000 }
