@@ -1,0 +1,2 @@
+use Test;
+say "foo bar";
